--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "csv-parse": "^5.5.6",
     "next": "14.2.13",
+    "plotly.js": "^2.35.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "eslint": "^8",
